@@ -706,7 +706,7 @@ name|HashSet
 argument_list|<>
 argument_list|()
 decl_stmt|;
-DECL|field|optionalExternalDependencies
+DECL|field|globalOptionalExternalDependencies
 specifier|private
 specifier|static
 specifier|final
@@ -714,10 +714,30 @@ name|Set
 argument_list|<
 name|String
 argument_list|>
-name|optionalExternalDependencies
+name|globalOptionalExternalDependencies
 init|=
 operator|new
 name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+DECL|field|perModuleOptionalExternalDependencies
+specifier|private
+specifier|static
+specifier|final
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Set
+argument_list|<
+name|String
+argument_list|>
+argument_list|>
+name|perModuleOptionalExternalDependencies
+init|=
+operator|new
+name|HashMap
 argument_list|<>
 argument_list|()
 decl_stmt|;
@@ -743,9 +763,10 @@ literal|"solr-solrj"
 argument_list|)
 argument_list|)
 expr_stmt|;
-comment|// Add external dependencies here that should be optional (i.e., not invoke Maven's transitive dep mechanism).
+comment|// Add external dependencies here that should be optional for all modules
+comment|// (i.e., not invoke Maven's transitive dependency mechanism).
 comment|// Format is "groupId:artifactId"
-name|optionalExternalDependencies
+name|globalOptionalExternalDependencies
 operator|.
 name|addAll
 argument_list|(
@@ -756,8 +777,6 @@ argument_list|(
 literal|"org.slf4j:jcl-over-slf4j"
 argument_list|,
 literal|"org.slf4j:jul-to-slf4j"
-argument_list|,
-literal|"org.slf4j:slf4j-api"
 argument_list|,
 literal|"org.slf4j:slf4j-log4j12"
 argument_list|)
@@ -1379,6 +1398,10 @@ name|ivyXmlFile
 operator|.
 name|getPath
 argument_list|()
+operator|+
+literal|": "
+operator|+
+name|e
 argument_list|,
 name|e
 argument_list|)
@@ -1420,7 +1443,7 @@ decl_stmt|;
 for|for
 control|(
 name|String
-name|artifactId
+name|module
 range|:
 name|interModuleExternalCompileScopeDependencies
 operator|.
@@ -1443,7 +1466,7 @@ name|sharedDependencies
 operator|.
 name|put
 argument_list|(
-name|artifactId
+name|module
 argument_list|,
 name|deps
 argument_list|)
@@ -1458,7 +1481,7 @@ name|interModuleExternalCompileScopeDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
 decl_stmt|;
 if|if
@@ -1528,7 +1551,7 @@ block|}
 for|for
 control|(
 name|String
-name|artifactId
+name|module
 range|:
 name|interModuleExternalTestScopeDependencies
 operator|.
@@ -1546,7 +1569,7 @@ name|sharedDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
 decl_stmt|;
 if|if
@@ -1567,7 +1590,7 @@ name|sharedDependencies
 operator|.
 name|put
 argument_list|(
-name|artifactId
+name|module
 argument_list|,
 name|deps
 argument_list|)
@@ -1583,7 +1606,7 @@ name|interModuleExternalTestScopeDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
 decl_stmt|;
 if|if
@@ -1694,7 +1717,7 @@ name|allExternalDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
 operator|||
 operator|!
@@ -1702,7 +1725,7 @@ name|allExternalDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
 operator|.
 name|contains
@@ -1755,7 +1778,7 @@ block|}
 for|for
 control|(
 name|String
-name|artifactId
+name|module
 range|:
 name|sharedDependencies
 operator|.
@@ -1773,7 +1796,7 @@ name|allExternalDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
 decl_stmt|;
 if|if
@@ -1794,24 +1817,102 @@ name|allExternalDependencies
 operator|.
 name|put
 argument_list|(
-name|artifactId
+name|module
 argument_list|,
 name|deps
 argument_list|)
 expr_stmt|;
 block|}
-name|deps
-operator|.
-name|addAll
-argument_list|(
+for|for
+control|(
+name|ExternalDependency
+name|dep
+range|:
 name|sharedDependencies
 operator|.
 name|get
 argument_list|(
-name|artifactId
+name|module
 argument_list|)
+control|)
+block|{
+name|String
+name|dependencyCoordinate
+init|=
+name|dep
+operator|.
+name|groupId
+operator|+
+literal|":"
+operator|+
+name|dep
+operator|.
+name|artifactId
+decl_stmt|;
+if|if
+condition|(
+name|globalOptionalExternalDependencies
+operator|.
+name|contains
+argument_list|(
+name|dependencyCoordinate
+argument_list|)
+operator|||
+operator|(
+name|perModuleOptionalExternalDependencies
+operator|.
+name|containsKey
+argument_list|(
+name|module
+argument_list|)
+operator|&&
+name|perModuleOptionalExternalDependencies
+operator|.
+name|get
+argument_list|(
+name|module
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+name|dependencyCoordinate
+argument_list|)
+operator|)
+condition|)
+block|{
+name|dep
+operator|=
+operator|new
+name|ExternalDependency
+argument_list|(
+name|dep
+operator|.
+name|groupId
+argument_list|,
+name|dep
+operator|.
+name|artifactId
+argument_list|,
+name|dep
+operator|.
+name|classifier
+argument_list|,
+name|dep
+operator|.
+name|isTestDependency
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
+block|}
+name|deps
+operator|.
+name|add
+argument_list|(
+name|dep
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * For each module, sets a compile-scope and a test-scope property    * with values that contain the appropriate&lt;dependency&gt;    * snippets.    */
@@ -4199,12 +4300,33 @@ decl_stmt|;
 name|boolean
 name|isOptional
 init|=
-name|optionalExternalDependencies
+name|globalOptionalExternalDependencies
 operator|.
 name|contains
 argument_list|(
 name|dependencyCoordinate
 argument_list|)
+operator|||
+operator|(
+name|perModuleOptionalExternalDependencies
+operator|.
+name|containsKey
+argument_list|(
+name|module
+argument_list|)
+operator|&&
+name|perModuleOptionalExternalDependencies
+operator|.
+name|get
+argument_list|(
+name|module
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+name|dependencyCoordinate
+argument_list|)
+operator|)
 decl_stmt|;
 name|SortedSet
 argument_list|<
